// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all render props 1`] = `
<div
  className="flow-modeler"
  style={
    Object {
      "gridTemplateColumns": "repeat(8, max-content)",
    }
  }
>
  <Component
    colStartIndex={1}
    key="1-1"
    rowStartIndex={3}
  >
    <div
      className="flow-element start-element"
    />
  </Component>
  <Component
    colStartIndex={2}
    key="2-1"
    rowStartIndex={3}
  >
    <Component>
      First Node
    </Component>
  </Component>
  <Component
    colStartIndex={3}
    key="3-1"
    rowStartIndex={3}
  >
    <Component
      type="diverging"
    >
      <label>
        Alternatives
      </label>
    </Component>
  </Component>
  <Component
    colStartIndex={4}
    key="4-1"
    rowStartIndex={1}
  >
    <HorizontalStroke
      incomingConnection={1}
    >
      <span>
        Stop Here
      </span>
    </HorizontalStroke>
  </Component>
  <Component
    colEndIndex={7}
    colStartIndex={5}
    key="5-1"
    rowStartIndex={1}
  >
    <HorizontalStroke
      outgoingConnection={1}
    />
  </Component>
  <Component
    colStartIndex={7}
    key="7-1"
    rowStartIndex={3}
  >
    <Component
      type="converging"
    />
  </Component>
  <Component
    colStartIndex={8}
    key="8-1"
    rowStartIndex={3}
  >
    <div
      className="arrow"
    />
    <div
      className="flow-element end-element"
    />
  </Component>
  <Component
    colStartIndex={4}
    key="4-2"
    rowStartIndex={2}
  >
    <HorizontalStroke
      incomingConnection={2}
    >
      <span>
        Continue
      </span>
    </HorizontalStroke>
  </Component>
  <Component
    colStartIndex={5}
    key="5-2"
    rowStartIndex={2}
  >
    <Component>
      Second Node
    </Component>
  </Component>
  <Component
    colEndIndex={7}
    colStartIndex={6}
    key="6-2"
    rowStartIndex={2}
  >
    <HorizontalStroke
      outgoingConnection={2}
    />
  </Component>
  <Component
    colStartIndex={4}
    key="4-3"
    rowStartIndex={3}
  >
    <HorizontalStroke
      incomingConnection={3}
    >
      <span>
        Unless it is already done
      </span>
    </HorizontalStroke>
  </Component>
  <Component
    colEndIndex={7}
    colStartIndex={5}
    key="5-3"
    rowStartIndex={3}
  >
    <HorizontalStroke
      outgoingConnection={3}
    />
  </Component>
</div>
`;

exports[`renders correctly with minimal/default props 1`] = `
<div
  className="flow-modeler"
  style={
    Object {
      "gridTemplateColumns": "repeat(8, max-content)",
    }
  }
>
  <Component
    colStartIndex={1}
    key="1-1"
    rowEndIndex={4}
    rowStartIndex={1}
  >
    <div
      className="flow-element start-element"
    />
  </Component>
  <Component
    colStartIndex={2}
    key="2-1"
    rowEndIndex={4}
    rowStartIndex={1}
  >
    <Component>
      First Node
    </Component>
  </Component>
  <Component
    colStartIndex={3}
    key="3-1"
    rowEndIndex={4}
    rowStartIndex={1}
  >
    <Component
      type="diverging"
    />
  </Component>
  <Component
    colStartIndex={4}
    key="4-1"
    rowEndIndex={2}
    rowStartIndex={1}
  >
    <HorizontalStroke
      incomingConnection={1}
    />
  </Component>
  <Component
    colEndIndex={7}
    colStartIndex={5}
    key="5-1"
    rowEndIndex={2}
    rowStartIndex={1}
  >
    <HorizontalStroke
      outgoingConnection={1}
    />
  </Component>
  <Component
    colStartIndex={7}
    key="7-1"
    rowEndIndex={4}
    rowStartIndex={1}
  >
    <Component
      type="converging"
    />
  </Component>
  <Component
    colStartIndex={8}
    key="8-1"
    rowEndIndex={4}
    rowStartIndex={1}
  >
    <div
      className="arrow"
    />
    <div
      className="flow-element end-element"
    />
  </Component>
  <Component
    colStartIndex={4}
    key="4-2"
    rowEndIndex={3}
    rowStartIndex={2}
  >
    <HorizontalStroke
      incomingConnection={2}
    />
  </Component>
  <Component
    colStartIndex={5}
    key="5-2"
    rowEndIndex={3}
    rowStartIndex={2}
  >
    <Component>
      Second Node
    </Component>
  </Component>
  <Component
    colEndIndex={7}
    colStartIndex={6}
    key="6-2"
    rowEndIndex={3}
    rowStartIndex={2}
  >
    <HorizontalStroke
      outgoingConnection={2}
    />
  </Component>
  <Component
    colStartIndex={4}
    key="4-3"
    rowEndIndex={4}
    rowStartIndex={3}
  >
    <HorizontalStroke
      incomingConnection={3}
    />
  </Component>
  <Component
    colEndIndex={7}
    colStartIndex={5}
    key="5-3"
    rowEndIndex={4}
    rowStartIndex={3}
  >
    <HorizontalStroke
      outgoingConnection={3}
    />
  </Component>
</div>
`;
